infrastructure/kubernetes_yamls/mosaico_namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "mosaico",
    "labels": {
      "name": "mosaico"
    }
  }
}
