infrastructure/kubernetes_yamls/huginn-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huginn-db
  labels:
    app: huginn
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: huginn-db-pod
  template:
    metadata:
      labels:
        pod-label: huginn-db-pod
    spec:
      containers:
      - name: postgres
        image: postgres:12
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: huginn-storage-claim
---
apiVersion: v1
kind: Service
metadata:
  name: huginn-db
  labels:
    app: huginn
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    pod-label: huginn-db-pod
  ports:
  - protocol: TCP
    port: 5432
  type: LoadBalancer
  loadBalancerIP: 172.17.15.249
