infrastructure/kubernetes_yamls/huginn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
spec:
  tls:
  - hosts:
    - agents.mysite.test
    secretName: my-tls-secret
  rules:
  - host: agents.mysite.test
    http:
      paths:
      - path: /
        backend:
          service:
            name: huginn-server
            port:
              number: 3000
        pathType: Prefix
